# training_data_generation

./: .gitignore  CMakeLists.txt  halton.cpp  halton.hpp  main.cpp  main_randomKP.cpp  map.ply  testing_projection.cpp
InSegLib/: InSegConfig.h  InSegLib.h  InSegMap.h
cmake/: FindAntTweakBar.cmake  FindGLEW.cmake
